--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,5 +24,8 @@
     "gatsby-transformer-sharp": "^5.12.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "wrangler": "^3.11.0"
   }
 }
